feat(children): edit register & add child
add child endpoint and divide register process in 2 steps
