# app/Models/Family.php
@@ -3,8 +3,14 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 
 class Family extends Model
 {
-  protected $fillable = ['name'];
+    protected $fillable = ['name'];
+
+    public function children(): HasMany
+    {
+        return $this->hasMany(Child::class);
+    }
 }
